<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detailed_information_scroll_view">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailed_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <RelativeLayout
            android:id="@+id/item_1_background"
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:background="@color/secondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/item_1_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/item_1_background"
            app:srcCompat="@drawable/ellipse_4"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people1"
            android:textSize="24sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/item_1_background"
            app:layout_constraintStart_toEndOf="@+id/imageView16"
            app:layout_constraintTop_toTopOf="@+id/item_1_background"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginStart="16dp"/>

        <RelativeLayout
            android:id="@+id/item_2_background"
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:background="@color/primary"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_1_background" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/item_2_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/item_2_background"
            app:srcCompat="@drawable/ellipse_4_1_"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people2"
            android:textSize="24sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/item_2_background"
            app:layout_constraintStart_toEndOf="@+id/imageView17"
            app:layout_constraintTop_toTopOf="@+id/item_2_background"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginStart="16dp"/>

        <RelativeLayout
            android:id="@+id/item_3_background"
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:background="@color/secondary"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_2_background" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/item_3_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/item_3_background"
            app:srcCompat="@drawable/ellipse_4_2_"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people3"
            android:textSize="24sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/item_3_background"
            app:layout_constraintStart_toEndOf="@+id/imageView18"
            app:layout_constraintTop_toTopOf="@+id/item_3_background"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginStart="16dp"/>

        <RelativeLayout
            android:id="@+id/item_4_background"
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:background="@color/primary"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_3_background" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/item_4_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/item_4_background"
            app:srcCompat="@drawable/ellipse_4_3_"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people4"
            android:textSize="24sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/item_4_background"
            app:layout_constraintStart_toEndOf="@+id/imageView19"
            app:layout_constraintTop_toTopOf="@+id/item_4_background"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginStart="16dp"/>

        <RelativeLayout
            android:id="@+id/item_5_background"
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:background="@color/secondary"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_4_background" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/item_5_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/item_5_background"
            app:srcCompat="@drawable/ellipse_4_4_"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people5"
            android:textSize="24sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/item_5_background"
            app:layout_constraintStart_toEndOf="@+id/imageView20"
            app:layout_constraintTop_toTopOf="@+id/item_5_background"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginStart="16dp"/>


        <RelativeLayout
            android:id="@+id/item_6_background"
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:background="@color/primary"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_5_background" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/item_6_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/item_6_background"
            app:srcCompat="@drawable/ellipse_4_5_"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people6"
            android:textSize="24sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/item_6_background"
            app:layout_constraintStart_toEndOf="@+id/imageView21"
            app:layout_constraintTop_toTopOf="@+id/item_6_background"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginStart="16dp"/>


        <RelativeLayout
            android:id="@+id/item_7_background"
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:background="@color/secondary"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_6_background" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/item_7_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/item_7_background"
            app:srcCompat="@drawable/ellipse_4_6_"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people7"
            android:textSize="24sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/item_7_background"
            app:layout_constraintStart_toEndOf="@+id/imageView22"
            app:layout_constraintTop_toTopOf="@+id/item_7_background"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginStart="16dp"/>

        <RelativeLayout
            android:id="@+id/item_8_background"
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:background="@color/primary"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_7_background" />

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/item_8_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/item_8_background"
            app:srcCompat="@drawable/ellipse_4_7_"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people8"
            android:textSize="24sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/item_8_background"
            app:layout_constraintStart_toEndOf="@+id/imageView23"
            app:layout_constraintTop_toTopOf="@+id/item_8_background"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginStart="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>